turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:19: error: type mismatch;
 found   : Unit
 required: Int
	rule(k) match{  
             ^LangtonsAnt:20: error: type mismatch;
 found   : Unit
 required: Int
		case 'R'	=> setCouleurSol(colors(k));droite();avance()
                                                        ^LangtonsAnt:21: error: type mismatch;
 found   : Unit
 required: Int
		case 'L' =>  setCouleurSol(colors(k));gauche();avance()
                                                  ^